--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -14,9 +14,9 @@
   "Delete document": "Delete document",
   "Rename document": "Rename document",
 
-  "File upload": "File upload (text, TEI, image)",
-  "From IIIF manifest": "From IIIF manifest",
-  "v2 or v3 image info.json": "v2 or v3 image info.json",
+  "File upload": "File upload (supported formats: text, TEI, image)",
+  "From IIIF image manifest": "From IIIF manifest",
+  "No presentation manifests": "Please note that there is currently support for IMAGE manifest only, but not PRESENTATION manifests.",
   "Import IIIF": "Import IIIF",
   "Paste URL to a IIIF image manifest": "Paste URL to a IIIF image manifest",
   "Please enter a valid IIIF manifest URL": "Please enter a valid IIIF manifest URL",
