Enhanced name formatting for the Assignment Team table

--- a/src/i18n/de/project-assignments.json
+++ b/src/i18n/de/project-assignments.json
@@ -21,6 +21,9 @@
   "Add people to the assignment.": "Weise diesem Arbeitsauftrag ein Projektteam zu.",
   "Name": "Name",
   "Member since": "Mitglied seit",
+  "You": "Du",
+  "Anonymous team member": "Anonymes Teammitglied",
+  "This user has not provided a profile name.": "Dieses Teammitglied hat keinen Profilnamen angegeben.",
   "Select at least 1 team member": "Wähle mindestens 1 Teammitglied",
   "Selected 1 team member": "1 Teammitglied ausgewählt",
   "Selected ${n} team members": "${n} Teammitglieder ausgewählt",
