--- a/src/i18n/en/project-assignments.json
+++ b/src/i18n/en/project-assignments.json
@@ -21,6 +21,9 @@
   "Add people to the assignment.": "Add people to the assignment",
   "Name": "Name",
   "Member since": "Member since",
+  "You": "You",
+  "Anonymous team member": "Anonymous team member",
+  "This user has not provided a profile name.": "This user has not provided a profile name.",
   "Select at least 1 team member": "Select at least 1 team member",
   "Selected 1 team member": "Selected 1 team member",
   "Selected ${n} team members": "Selected ${n} team members",
