Adds localization to tag widget, annotation list filter and color coding panel

--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -19,5 +19,20 @@
   "Cancel": "Cancel",
   "With Great Power...": "With Great Power...",
   "...comes great responsibility.": "...comes great responsibility. You can change other users' annotations because you have administrator privileges on this document. Use your powers responsibly.",
-  "Proceed": "Proceed"
+  "Proceed": "Proceed",
+
+  "Show": "Show",
+  "all annotations": "all annotations",
+  "annotations in current view": "annotations in current view",
+
+  "Color by": "Color by",
+  "No color coding": "No color coding",
+  "Public vs. Private": "Public vs. Private",
+  "Your private annotations": "Your private annotation",
+  "All public annotations": "All public annotations",
+  "Assignment": "Assignment",
+  "No Assignment": "No Assignment",
+  "Creator": "Creator",
+  "First Tag": "First Tag",
+  "No tag": "No tag"
 }
