--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -10,6 +10,7 @@
 
   "Comment...": "Kommentar...",
   "Reply...": "Antworten...",
+  "Add a tag...": "Neues tag...",
 
   "Edit comment": "Kommentar bearbeiten",
   "Delete annotation": "Annotation löschen",
@@ -19,5 +20,20 @@
   "Cancel": "Abbrechen",
   "With Great Power...": "Aus großer Macht...",
   "...comes great responsibility.": "...folgt große Verantwortung. Du kannst die Annotationen anderer Benutzer ändern weil Du Adminstrator-Rechte auf diesem Dokument hast. Nutze deine Befugnisse verantwortungsbewusst.",
-  "Proceed": "Weitermachen"
+  "Proceed": "Weitermachen",
+
+  "Show": "Zeige",
+  "all annotations": "alle Annotationen",
+  "annotations in current view": "sichtbare Annotationen",
+
+  "Color by": "Farbschema",
+  "No color coding": "ohne Farbschema",
+  "Public vs. Private": "Öffentlich vs. Privat",
+  "Your private annotations": "Deine privaten Annotationen",
+  "All public annotations": "Alle öffentlichen Annotationen",
+  "Assignment": "Arbeitsaufträge",
+  "No Assignment": "Ohne Arbeitsauftrag",
+  "Creator": "Autor",
+  "First Tag": "Erstes Tag",
+  "No tag": "Kein tag"
 }
