Adds localization to tag widget, annotation list filter and color coding panel

--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -10,6 +10,7 @@
 
   "Comment...": "Comment...",
   "Reply...": "Reply...",
+  "Add a tag...": "Add a tag...",
 
   "Edit comment": "Edit comment",
   "Delete annotation": "Delete annotation",
