--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -13,6 +13,7 @@
   "Open document in new tab": "Open document in new tab",
   "Delete document": "Delete document",
   "Rename document": "Rename document",
+  "Export annotations as CSV": "Export annotations as CSV",
 
   "File upload": "File upload (supported formats: text, TEI, image)",
   "From IIIF image manifest": "From IIIF manifest",
