Metadata storage + local state update

--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -12,7 +12,7 @@
   "Open document": "Dokument öffnen",
   "Open document in new tab": "In neuem Tab öffnen",
   "Delete document": "Dokument löschen",
-  "Rename document": "Dokument umbenennen",
+  "Edit document metadata": "Metadaten bearbeiten",
 
   "Edit Document Metadata": "Dokumentmetadaten",
   "Title": "Titel",
