--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -12,7 +12,7 @@
   "Open document": "Open document",
   "Open document in new tab": "Open document in new tab",
   "Delete document": "Delete document",
-  "Rename document": "Rename document",
+  "Edit document metadata": "Edit document metadata",
 
   "Edit Document Metadata": "Edit Document Metadata",
   "Title": "Title",
