--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -22,6 +22,9 @@
   "Delete project": "Projekt löschen",
   "Edit project details": "Projektinformationen bearbeiten",
 
+  "Are you sure?": "Bist Du sicher?",
+  "Are you sure you want to delete this project permanently?": "Bist Du sicher dass Du dieses Projekt löschen willst? Diese Operation ist nicht umkehrbar.",
+
   "Project Details": "Projektinformationen",
   "Name": "Name",
   "Description": "Beschreibung",
