--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -22,6 +22,11 @@
   "Delete project": "Delete project",
   "Edit project details": "Edit project details",
 
+  "Are you sure?": "Are you sure?",
+  "Are you sure you want to delete this project permanently?": "Are you sure you want to delete this project permanently? This action is not reversible.",
+
+
+
   "Project Details": "Project Details",
   "Name": "Name",
   "Description": "Description",
