--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -11,9 +11,11 @@
   
   "Open document": "Open document",
   "Open document in new tab": "Open document in new tab",
-  "Delete document": "Delete document",
   "Export annotations as CSV": "Export annotations as CSV",
   "Edit document metadata": "Edit document metadata",
+  "Delete document": "Delete document",
+  "Are you sure?": "Are you sure?",
+  "Are you sure you want to delete this document?": "Are you sure you want to delete this document?",
 
   "Edit Document Metadata": "Edit Document Metadata",
   "Title": "Title",
