--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -21,8 +21,10 @@
 
   "Edit project details": "Edit project details",
   "Delete project": "Delete project",
+  "Leave project": "Leave project",
   "Are you sure?": "Are you sure?",
   "Are you sure you want to delete this project permanently?": "Are you sure you want to delete this project permanently? This action is not reversible.",
+  "Are you sure you want to leave this project": "Are you sure you want to leave this project",
 
   "Project Details": "Project Details",
   "Name": "Name",
