Initial plumbing: project-level TEI export for admins (without annotations for now)

--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -11,6 +11,7 @@
   
   "Open document": "Open document",
   "Open document in new tab": "Open document in new tab",
+  "Export TEI file": "Export TEI file",
   "Export annotations as CSV": "Export annotations as CSV",
   "Edit document metadata": "Edit document metadata",
   "Delete document": "Delete document",
