--- a/src/i18n/en/project-assignments.json
+++ b/src/i18n/en/project-assignments.json
@@ -46,6 +46,13 @@
 
   "The assignment was created successfully": "The assignment was created successfully and was added to the team members' dashboards.",
 
+  "Edit assignment": "Edit assignment",
+  "Delete assignment": "Delete assignment",
+
+  "Deleted": "Deleted",
+  "Assignment deleted successfully": "Assignment deleted successfully",
+
   "Something went wrong": "Something went wrong",
-  "Could not delete the assignment.": "Could not create the document."
+  "Could not delete the assignment.": "Could not delete the assignment.",
+  "Could not open the assignment.": "Could not open the assignment."
 }
