--- a/src/i18n/en/project-assignments.json
+++ b/src/i18n/en/project-assignments.json
@@ -52,7 +52,7 @@
   "Delete assignment": "Delete assignment",
 
   "Deleted": "Deleted",
-  "Assignment deleted successfully": "Assignment deleted successfully",
+  "Assignment deleted successfully.": "Assignment deleted successfully.",
 
   "Something went wrong": "Something went wrong",
   "Could not delete the assignment.": "Could not delete the assignment.",
