--- a/src/i18n/de/project-assignments.json
+++ b/src/i18n/de/project-assignments.json
@@ -9,7 +9,7 @@
   "Cancel": "Abbrechen",
   "Next": "Weiter",
   "Back": "Zurück",
-  "Create Assignment": "Arbeitsauftrag Erstellen",
+  "Create Assignment": "Arbeitsauftrag erstellen",
 
   "Step": "Schritt",
 
