--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -10,7 +10,7 @@
 
   "Comment...": "Kommentar...",
   "Reply...": "Antworten...",
-  "Add a tag...": "Neues tag...",
+  "Add a tag...": "Neues Tag...",
 
   "Edit comment": "Kommentar bearbeiten",
   "Delete annotation": "Annotation löschen",
