--- a/src/i18n/en/project-assignment-details.json
+++ b/src/i18n/en/project-assignment-details.json
@@ -1,4 +1,5 @@
 {
   "Open document": "Open document",
-  "Open document in new tab": "Open document in new tab"
+  "Open document in new tab": "Open document in new tab",
+  "Export TEI file": "Export TEI file"
 }
