--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -9,6 +9,8 @@
   "Open document": "Dokument öffnen",
   "Open document in new tab": "In neuem Tab öffnen",
   "Export TEI file": "TEI/XML exportieren",
+  "Public annotations only": "Nur öffentliche Annotationen",
+  "Include my private annotations": "Inkl. meiner privaten Annotationen",
   "Export annotations as CSV": "Annotationen als CSV exportieren",
   "Edit document metadata": "Metadaten bearbeiten",
   "Delete document": "Dokument löschen",
