--- a/src/i18n/en/project-assignment-details.json
+++ b/src/i18n/en/project-assignment-details.json
@@ -1,5 +1,7 @@
 {
   "Open document": "Open document",
   "Open document in new tab": "Open document in new tab",
-  "Export TEI file": "Export TEI file"
+  "Export TEI file": "Export TEI file",
+  "Public annotations only": "Export public annotations only",
+  "Include my private annotations": "Include my private annotations"
 }
