--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -9,6 +9,8 @@
   "Open document": "Open document",
   "Open document in new tab": "Open document in new tab",
   "Export TEI file": "Export TEI file",
+  "Public annotations only": "Export public annotations only",
+  "Include my private annotations": "Include my private annotations",
   "Export annotations as CSV": "Export annotations as CSV",
   "Edit document metadata": "Edit document metadata",
   "Delete document": "Delete document",
