--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -41,5 +41,6 @@
   "My Documents": "My Documents",
   "All Documents": "All Documents",
   "Document Type": "Document Type",
-  "URL": "URL"
+  "URL": "URL",
+  "Add Selected Documents": "Add Selected Documents"
 }
