--- a/src/i18n/de/annotation-image.json
+++ b/src/i18n/de/annotation-image.json
@@ -1,9 +1,3 @@
 {
-  "Anonymous": "Anonym",
-  "Enter Image URL": "Enter Image URL",
-  "Enter a publicly available URL to embed the image into your annotation": "Enter a publicly available URL to embed the image into your annotation",
-  "Enter YouTube video URL": "Enter YouTube video URL",
-  "Enter a publicly available YouTube URL to embed the video into your annotation": "Enter a publicly available YouTube URL to embed the video into your annotation",
-  "URL": "URL",
-  "Save": "Save"
+  "Anonymous": "Anonym"
 }
