--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -42,5 +42,7 @@
   "All Documents": "All Documents",
   "Document Type": "Document Type",
   "URL": "URL",
-  "Add Selected Documents": "Add Selected Documents"
+  "Add Selected Documents": "Add Selected Documents",
+  "No Documents": "No Documents",
+  "Search": "Search"
 }
