Good working version

--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -44,5 +44,6 @@
   "URL": "URL",
   "Add Selected Documents": "Add Selected Documents",
   "No Documents": "No Documents",
-  "Search": "Search"
+  "Search": "Search",
+  "View Document Metadata": "View Document Metadata"
 }
