--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -43,5 +43,6 @@
   "Document Type": "Document Type",
   "URL": "URL",
   "Add Selected Documents": "Add Selected Documents",
-  "Search": "Search"
+  "Search": "Search",
+  "View Document Metadata": "View Document Metadata"
 }
