Style tweaks, public/private note plumbing, i18n label

--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -29,6 +29,7 @@
   "New Note": "Neue Notiz",
   "Create new public note": "Neue öffentliche Notiz",
   "Create new private note": "Neue private Notiz",
+  "Private note": "Private Notiz",
 
   "Sort by": "Sortieren:",
   "newest": "Neueste",
