--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -29,6 +29,7 @@
   "New Note": "New Note",
   "Create new public note": "Create new public note",
   "Create new private note": "Create new private note",
+  "Private note": "Private note",
 
   "Sort by": "Sort by",
   "newest": "newest",
