Label tweak: delete option on note no longer says 'delete annotation'

--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -25,6 +25,7 @@
   "Create new public note": "Neue öffentliche Notiz",
   "Create new private note": "Neue private Notiz",
   "Private note": "Private Notiz",
+  "Delete note": "Notiz löschen",
   "Sort by": "Sortieren:",
   "newest": "Neueste",
   "oldest": "Älteste",
