--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -26,6 +26,7 @@
   "Create new public note": "Create new public note",
   "Create new private note": "Create new private note",
   "Private note": "Private note",
+  "Delete note": "Delete note",
 
   "Sort by": "Sort by",
   "newest": "newest",
