Adds project sorting to the dashboard

--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -18,6 +18,8 @@
 
   "Search": "Suche",
   "Sort": "Sortieren",
+  "Newest": "Neuestes Projekt",
+  "Oldest": "Ältestes Projekt",
 
   "Edit project details": "Projektinformationen bearbeiten",
   "Delete project": "Projekt löschen",
