--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -18,6 +18,8 @@
 
   "Search": "Search",
   "Sort": "Sort",
+  "Newest": "Newest",
+  "Oldest": "Oldest",
 
   "Edit project details": "Edit project details",
   "Delete project": "Delete project",
