--- a/src/i18n/de/auth-forgot-password.json
+++ b/src/i18n/de/auth-forgot-password.json
@@ -3,7 +3,7 @@
   "Please enter the email you use to sign in.": "Bitte gib die E-Mailadresse ein mit der Du registriert bist.",
   "Your email": "Deine E-Mailadresse",
   "Request password reset": "Passwort zurücksetzen",
-  "Link sent": "Falls Deine E-Mail in unserem System ist, erhälts Du in Kürze einen Link um dein Passwort zurückzusetzen.",
+  "Link sent": "Falls Deine E-Mail in unserem System ist, erhältst Du in Kürze einen Link, um dein Passwort zurückzusetzen.",
   "Email rate limit exceeded": "Zuviele Anmeldeversuche",
   "Something went wrong": "Etwas ist schiefgelaufen"
 }
