UI: selector dropdown for filter dimension

--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -30,8 +30,9 @@
   "newest": "Neueste",
   "oldest": "Älteste",
   "Color by": "Farbschema",
-  "Filter by": "Filter",
   "No color coding": "ohne Farbschema",
+  "Filter by": "Filter",
+  "Show all annotations": "Alle Annotationen anzeigen", 
   "Public vs. Private": "Öffentlich vs. Privat",
   "Your private annotations": "Deine privaten Annotationen",
   "All public annotations": "Alle öffentlichen Annotationen",
