Filtering by tag

--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -43,6 +43,7 @@
   "No Assignment": "No Assignment",
   "Creator": "Creator",
   "First Tag": "First Tag",
+  "Tag": "Tag",
   "No tag": "No tag",
   "Enter Image URL": "Enter Image URL",
   "Enter a publicly available URL to embed the image into your annotation": "Enter a publicly available URL to embed the image into your annotation",
