--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -40,6 +40,7 @@
   "No Assignment": "Ohne Arbeitsauftrag",
   "Creator": "Autor",
   "First Tag": "Erstes Tag",
+  "Tag": "Tag",
   "No tag": "Kein tag",
   "Enter Image URL": "Enter Image URL",
   "Enter a publicly available URL to embed the image into your annotation": "Enter a publicly available URL to embed the image into your annotation",
