--- a/src/i18n/de/annotation-image.json
+++ b/src/i18n/de/annotation-image.json
@@ -1,3 +1,5 @@
 {
-  "Anonymous": "Anonym"
+  "Pan and zoom the image, select annotations": "Bild bewegen und zoomen, Annotationen selektieren",
+  "Create rectangle annotations": "Rechteck-Annotationen erstellen",
+  "Create polygon annotations": "Polygon-Annotationen erstellen"
 }
