--- a/src/i18n/de/auth-login.json
+++ b/src/i18n/de/auth-login.json
@@ -1,5 +1,6 @@
 {
   "Welcome Back": "Willkommen Zurück",
+  "Login method": "Login-Methode",
   "Log into your account": "Account Login",
   "Email": "Email",
   "Password": "Passwort",
