--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -36,6 +36,7 @@
 
   "Ok": "Ok",
   "Cancel": "Abbrechen",
+  "Close": "Schließen",
 
   "Something went wrong": "Etwas ist schiefgelaufen",
   "Could not create the project.": "Das Projekt konnte nicht erstellt werden.",
