--- a/src/i18n/de/project-assignments.json
+++ b/src/i18n/de/project-assignments.json
@@ -7,6 +7,7 @@
   "4. Verify": "4. Kontrolle",
 
   "Cancel": "Abbrechen",
+  "Close": "Schließen",
   "Next": "Weiter",
   "Back": "Zurück",
   "Create Assignment": "Arbeitsauftrag erstellen",
