--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -1,6 +1,7 @@
 {
   "Ok": "Ok",
   "Cancel": "Abbrechen",
+  "Close": "Schließen",
   "Save": "Speichern",
   "Clear": "Löschen",
   "Add a project description": "Projektbeschreibung hinzufügen",
