--- a/src/i18n/en/auth-login.json
+++ b/src/i18n/en/auth-login.json
@@ -1,5 +1,6 @@
 {
   "Welcome Back": "Welcome Back",
+  "Login method": "Login method",
   "Log into your account": "Log into your account",
   "Email": "Email",
   "Password": "Password",
