--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -1,6 +1,7 @@
 {
   "Ok": "Ok",
   "Cancel": "Cancel",
+  "Close": "Close",
   "Save": "Save",
   "Clear": "Clear",
   "Add a project description": "Add a project description",
