--- a/src/i18n/de/project-collaboration.json
+++ b/src/i18n/de/project-collaboration.json
@@ -23,5 +23,6 @@
   "Remove_anonymous": "Bist Du sicher dass Du diesen Benutzer aus dem Projekt entfernen willst?",
   "Remove": "Löschen",
   "Yes, I want to leave": "Ja, Projekt verlassen",
-  "Cancel": "Abbrechen"
+  "Cancel": "Abbrechen",
+  "Close": "Schließen"
 }
