--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -36,6 +36,7 @@
 
   "Ok": "Ok",
   "Cancel": "Cancel",
+  "Close": "Close",
 
   "Something went wrong": "Something went wrong",
   "Could not create the project.": "Could not create the project.",
