--- a/src/i18n/en/project-assignments.json
+++ b/src/i18n/en/project-assignments.json
@@ -7,6 +7,7 @@
   "4. Verify": "4. Verify",
 
   "Cancel": "Cancel",
+  "Close": "Close",
   "Next": "Next",
   "Back": "Back",
   "Create Assignment": "Create Assignment",
