More a11y label localization

--- a/src/i18n/de/project-assignment-details.json
+++ b/src/i18n/de/project-assignment-details.json
@@ -1,4 +1,5 @@
 {
+  "Menu actions for document:": "Menüoptionen für Dokument:",
   "Open document": "Dokument öffnen",
   "Open document in new tab": "In neuem Tab öffnen",
   "Export TEI file": "TEI/XML exportieren",
