--- a/src/i18n/de/project-assignments.json
+++ b/src/i18n/de/project-assignments.json
@@ -49,6 +49,7 @@
   "The assignment was created successfully": "Der Arbeitsauftrag wurde erfolgreich erstellt, und dem Dashboard der Teammitglieder hinzugefügt.",
   "The assignment was updated successfully": "Der Arbeitsauftrag wurde erfolgreich aktualisiert.",
 
+  "Menu actions for assignment:": "Menüoptionen für Arbeitsauftrag:",
   "Edit assignment": "Arbeitsauftrag ändern",
   "Delete assignment": "Arbeitsauftrag löschen",
 
