--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -7,6 +7,7 @@
   "Add a project description": "Add a project description",
   "Add a project description...": "Add a project description...",
   "Import Document": "Import Document",
+  "Menu actions for document:": "Menu actions for document:",
   "Open document": "Open document",
   "Open document in new tab": "Open document in new tab",
   "Export TEI file": "Export TEI file",
