--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -7,6 +7,7 @@
   "Add a project description": "Projektbeschreibung hinzufügen",
   "Add a project description...": "Projektbeschreibung hinzufügen...",
   "Import Document": "Dokument Importieren",
+  "Menu actions for document:": "Menüoptionen für Dokument:",
   "Open document": "Dokument öffnen",
   "Open document in new tab": "In neuem Tab öffnen",
   "Export TEI file": "TEI/XML exportieren",
