--- a/src/i18n/en/project-assignments.json
+++ b/src/i18n/en/project-assignments.json
@@ -49,6 +49,7 @@
   "The assignment was created successfully": "The assignment was created successfully and was added to the team members' dashboards.",
   "The assignment was updated successfully": "The assignment was updated successfully.",
 
+  "Menu actions for assignment:": "Menu actions for assignment:",
   "Edit assignment": "Edit assignment",
   "Delete assignment": "Delete assignment",
 
