More a11y label tweaks

--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -51,6 +51,8 @@
   "Enter YouTube video URL": "Enter YouTube video URL",
   "Enter a publicly available YouTube URL to embed the video into your annotation": "Enter a publicly available YouTube URL to embed the video into your annotation",
   "URL": "URL",
+  "Back to assignment overview": "Zurück zur Arbeitsauftragsübersicht",
+  "Back to project overview": "Zurück zur Projekt-Übersicht",
   "Zoom in": "Zoom +",
   "Zoom out": "Zoom -"
 }
