--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -53,6 +53,8 @@
   "Enter YouTube video URL": "Enter YouTube video URL",
   "Enter a publicly available YouTube URL to embed the video into your annotation": "Enter a publicly available YouTube URL to embed the video into your annotation",
   "URL": "URL",
+  "Back to assignment overview": "Back to assignment overview",
+  "Back to project overview": "Back to project overview",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out"
 }
