More a11y label tweaks

--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -12,6 +12,8 @@
   "Untitled Project": "Unbenanntes Projekt",
   "No description.": "Keine Projektbeschreibung.",
 
+  "Show notifications": "Benachrichtigungen anzeigen",
+
   "All": "Alle",
   "My Projects": "Meine Projekte",
   "Shared with me": "Mit mir geteilt",
