--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -12,6 +12,8 @@
   "Untitled Project": "Untitled Project",
   "No description.": "No description.",
 
+  "Show notifications": "Show notifications",
+
   "All": "All",
   "My Projects": "My Projects",
   "Shared with me": "Shared with me",
