More a11y label tweaks

--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -23,6 +23,7 @@
   "Newest": "Neuestes Projekt",
   "Oldest": "Ältestes Projekt",
 
+  "Show menu actions menu for project:": "Menüoptionen für Projekt:",
   "Edit project details": "Projektinformationen bearbeiten",
   "Delete project": "Projekt löschen",
   "Leave project": "Projekt verlassen",
