--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -23,6 +23,7 @@
   "Newest": "Newest",
   "Oldest": "Oldest",
 
+  "Show menu actions menu for project:": "Show menu actions menu for project:",
   "Edit project details": "Edit project details",
   "Delete project": "Delete project",
   "Leave project": "Leave project",
