--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -1,6 +1,6 @@
 {
   "Ok": "Ok",
-  "Cancel": "Cancel",
+  "Done": "Done",
   "Save": "Save",
   "Clear": "Clear",
   "Add a project description": "Add a project description",
@@ -44,5 +44,11 @@
   "URL": "URL",
   "Add Selected Documents": "Add Selected Documents",
   "Search": "Search",
-  "View Document Metadata": "View Document Metadata"
+  "View Document Metadata": "View Document Metadata",
+  "Private": "Private",
+  "Make Private": "Make Private",
+  "Make Public": "Make Public",
+  "Cancel": "Cancel",
+  "Make Document Public": "Make Document Public",
+  "Public Document Warning Message": "By making this document Public, you are asserting that you have sufficient rights, licensing, or permission to do so."
 }
