--- a/src/i18n/de/annotation-text.json
+++ b/src/i18n/de/annotation-text.json
@@ -1,3 +1,6 @@
 {
-  "PDF zoom level": "PDF Zoomstufe"
+  "PDF zoom level": "PDF Zoomstufe",
+  "Automatic zoom": "Automatischer Zoom",  
+  "Original size": "Originalgröße",
+  "Fit width": "Bildschirmbreite"
 }
