--- a/src/i18n/en/project-collaboration.json
+++ b/src/i18n/en/project-collaboration.json
@@ -25,5 +25,11 @@
   "Remove": "Remove",
   "Yes, I want to leave": "Yes, I want to leave",
   "Cancel": "Cancel",
-  "Close": "Close"
+  "Close": "Close",
+
+  "Invitation Sent": "Invitation Sent",
+  "Invitation was sent to": "Invitation was sent to ${user}",
+  "Something went wrong": "Something went wrong",
+  "Could not delete user.": "Could not delete user.",
+  "Could not send invitation.": "Could not send invitation."
 }
