--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -6,23 +6,18 @@
   "Read the tutorial": "Nutze die Wartezeit auf deine erste Projekteinladung doch, um unsere <a href=\"./help\">Tutorial-Ressourcen</a> zu erkunden.",
   "Fret not one": "Aber keine Panik! Eine Projekteinladung wartet schon auf Dich. Schau in Deinen ${icon} Benachrichtigungen nach, um loszulegen.",
   "Fret not more": "Aber keine Panik! ${count} Projekteinladungen warten schon auf Dich. Schau in Deinen ${icon} Benachrichtigungen nach, um loszulegen.",
-
   "Projects": "Projekte",
   "New Project": "Neues Projekt",
   "Untitled Project": "Unbenanntes Projekt",
   "No description.": "Keine Projektbeschreibung.",
-
   "Show notifications": "Benachrichtigungen anzeigen",
-
   "All": "Alle",
   "My Projects": "Meine Projekte",
   "Shared with me": "Mit mir geteilt",
-
   "Search": "Suche",
   "Sort": "Sortieren",
   "Newest": "Neuestes Projekt",
   "Oldest": "Ältestes Projekt",
-
   "Show menu actions menu for project:": "Menüoptionen für Projekt:",
   "Edit project details": "Projektinformationen bearbeiten",
   "Delete project": "Projekt löschen",
@@ -30,22 +25,21 @@
   "Are you sure?": "Bist Du sicher?",
   "Are you sure you want to delete this project permanently?": "Bist Du sicher dass Du dieses Projekt löschen willst? Diese Operation ist nicht umkehrbar.",
   "Are you sure you want to leave this project": "Bist Du sicher dass Du dieses Projekt verlassen willst?",
-
   "Project Details": "Projektinformationen",
   "Name": "Name",
   "Description": "Beschreibung",
   "Project name...": "Projektname...",
   "Project description...": "Beschreibung...",
-
   "Ok": "Ok",
   "Cancel": "Abbrechen",
   "Close": "Schließen",
-
   "Something went wrong": "Etwas ist schiefgelaufen",
   "Could not create the project.": "Das Projekt konnte nicht erstellt werden.",
   "Could not delete the project.": "Das Projekt konnte nicht gelöscht werden.",
   "Error saving project details": "Fehler beim Speichern der Projektdetails.",
-
-  "We're working on it!": "Wir arbeiten dran!", 
-  "This feature will become available soon.": "Diese Funktion wird bald verfügbar sein."
+  "We're working on it!": "Wir arbeiten dran!",
+  "This feature will become available soon.": "Diese Funktion wird bald verfügbar sein.",
+  "User Profile Message": "Please complete your User Profile",
+  "Complete Profile": "Complete Profile",
+  "User Profile": "User Profile"
 }
