--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -39,7 +39,7 @@
   "Error saving project details": "Error saving project details.",
   "We're working on it!": "We're working on it!",
   "This feature will become available soon.": "This feature will become available soon.",
-  "User Profile Message": "Please complete your User Profile",
+  "User Profile Message": "Please complete your User Profile.",
   "Complete Profile": "Complete Profile",
   "User Profile": "User Profile"
 }
