Fixes the default 'IIIF_IMAGE' protocol value for file uploads

--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -17,6 +17,8 @@
   "Export annotations as CSV": "Annotationen als CSV exportieren",
   "Edit document metadata": "Metadaten bearbeiten",
   "Delete document": "Dokument löschen",
+  "Deleted": "Gelöscht",
+  "Document deleted successfully.": "Das Dokument wurde erfolgreich gelöscht.",
   "Are you sure?": "Bist Du sicher?",
   "Are you sure you want to delete this document?": "Bist Du sicher dass Du dieses Dokument löschen willst?",
   "Edit Document Metadata": "Dokumentmetadaten",
@@ -35,9 +37,11 @@
   "Import IIIF": "IIIF Importieren",
   "Paste URL to a IIIF image manifest": "URL zu einem IIIF Bild-Manifest",
   "Please enter a valid IIIF manifest URL": "Bitte eine gültige IIIF Manifest URL eingeben",
+  "Importing ${n} items": "Importiere ${n} Dateien",
   "Something went wrong": "Etwas ist schiefgelaufen",
   "Could not create the document.": "Das Dokument konnte nicht erstellt werden.",
   "Could not rename the document.": "Das Dokument konnte nicht umbenannt werden.",
+  "Could not delete the document.": "Das Dokument konnte nicht gelöscht werden.",
   "Document Library": "Document Library",
   "Select a document or upload a new one.": "Select a document or upload a new one.",
   "Add Document": "Add Document",
