--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -17,6 +17,8 @@
   "Export annotations as CSV": "Export annotations as CSV",
   "Edit document metadata": "Edit document metadata",
   "Delete document": "Delete document",
+  "Deleted": "Deleted",
+  "Document deleted successfully.": "Document deleted successfully.",
   "Are you sure?": "Are you sure?",
   "Are you sure you want to delete this document?": "Are you sure you want to delete this document?",
   "Edit Document Metadata": "Edit Document Metadata",
@@ -35,9 +37,11 @@
   "Import IIIF": "Import IIIF",
   "Paste URL to a IIIF image manifest": "Paste URL to a IIIF image manifest",
   "Please enter a valid IIIF manifest URL": "Please enter a valid IIIF manifest URL",
+  "Importing ${n} items": "Importing ${n} items",
   "Something went wrong": "Something went wrong",
   "Could not create the document.": "Could not create the document.",
   "Could not rename the document.": "Could not rename the document.",
+  "Could not delete the document.": "Could not delete the document.",
   "Document Library": "Document Library",
   "Select a document or upload a new one.": "Select a document or upload a new one.",
   "Add Document": "Add Document",
