--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -43,7 +43,7 @@
   "Filter by": "Filter by",
   "Show all annotations": "Show all annotations", 
   "Public vs. Private": "Public vs. Private",
-  "Your private annotations": "Your private annotation",
+  "Your private annotations": "Your private annotations",
   "All public annotations": "All public annotations",
   "Assignment": "Assignment",
   "No Assignment": "No Assignment",
