--- a/src/i18n/de/account-menu.json
+++ b/src/i18n/de/account-menu.json
@@ -1,5 +1,7 @@
 {
   "Profile Settings": "Profileinstellungen",
   "Help": "Hilfe",
-  "Sign out": "Logout"
+  "Sign out": "Logout",
+  "Users": "Users",
+  "Site Administration": "Site Administration"
 }
