--- a/src/i18n/en/account-menu.json
+++ b/src/i18n/en/account-menu.json
@@ -1,5 +1,7 @@
 {
   "Profile Settings": "Profile Settings",
   "Help": "Help",
-  "Sign out": "Sign out"
+  "Sign out": "Sign out",
+  "Users": "Users",
+  "Site Administration": "Site Administration"
 }
