--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -42,6 +42,8 @@
   "User Profile Message": "Please complete your User Profile.",
   "Complete Profile": "Complete Profile",
   "User Profile": "User Profile",
+  "Users": "Users",
+  "Site Administration": "Site Administration",
   "Create Project": "Create Project",
   "Create": "Create",
   "Project Name": "Project Name",
