--- a/src/i18n/de/project-collaboration.json
+++ b/src/i18n/de/project-collaboration.json
@@ -9,25 +9,25 @@
   "Project Students": "Student",
   "Anonymous team member": "Anonymes Teammitglied",
   "This user has not provided a profile name.": "Dieses Teammitglied hat keinen Profilnamen angegeben.",
-
   "You must set a name": "Du musst einen Namen oder Nickname in Deinen <a href=\"${url}\">Profileinstellungen</a> angeben, bevor Du andere Benutzer einladen kannst.",
-
   "Invite User to Project": "Benutzer Einladen",
   "Enter e-mail and access level.": "Bitte gib die E-mail Adresse und Berechtigungsstufe an.",
   "Send invitation": "Einladung abschicken",
   "You cannot send an invitation to yourself.": "Wir wissen, wie schön es ist, sich begehrt zu fühlen. Aber du kannst leider keine Einladung an dich selbst senden.",
   "This user already has an invitation waiting.": "Auf diesen Benutzer wartet bereits eine Einladung.",
-
   "Confirm Remove User": "Bist Du sicher?",
   "Leave Project?": "Projekt Verlassen?",
   "You are about to leave": "Diese Aktion kann nicht rückgängig gemacht werden. Wenn Du später wieder am Projekt teilnehmen willst, brauchst Du eine neue Einladung. Bist Du sicher dass Du das Projekt verlassen willst?",
   "Remove_name": "Bist Du sicher dass Du <strong>${name}</strong> aus dem Projekt entfernen willst?",
+  "Delete_invite": "Are you sure you want to delete the invitation to ${email}",
   "Remove_anonymous": "Bist Du sicher dass Du diesen Benutzer aus dem Projekt entfernen willst?",
+  "Confirm Delete Invite": "Confirm Delete Invite",
+  "Could not delete invitation.": "Could not delete invitation.",
   "Remove": "Löschen",
+  "Delete": "Delete",
   "Yes, I want to leave": "Ja, Projekt verlassen",
   "Cancel": "Abbrechen",
   "Close": "Schließen",
-
   "Invitation Sent": "Einladung abgeschickt",
   "Invitation was sent to": "Die Einladung wurde an ${user} verschickt",
   "Something went wrong": "Etwas ist schiefgelaufen",
