--- a/src/i18n/de/project-collaboration.json
+++ b/src/i18n/de/project-collaboration.json
@@ -19,18 +19,18 @@
   "Leave Project?": "Projekt Verlassen?",
   "You are about to leave": "Diese Aktion kann nicht rückgängig gemacht werden. Wenn Du später wieder am Projekt teilnehmen willst, brauchst Du eine neue Einladung. Bist Du sicher dass Du das Projekt verlassen willst?",
   "Remove_name": "Bist Du sicher dass Du <strong>${name}</strong> aus dem Projekt entfernen willst?",
-  "Delete_invite": "Are you sure you want to delete the invitation to ${email}",
+  "Delete_invite": "Bist Du sicher dass Du die Einladung an ${email} löschen willst?",
   "Remove_anonymous": "Bist Du sicher dass Du diesen Benutzer aus dem Projekt entfernen willst?",
-  "Confirm Delete Invite": "Confirm Delete Invite",
-  "Could not delete invitation.": "Could not delete invitation.",
-  "Remove": "Löschen",
-  "Delete": "Delete",
+  "Confirm Delete Invite": "Einladung Widerrufen",
+  "Could not delete invitation.": "Einladung konnte nicht widerufen werden.",
+  "Remove": "Entfernen",
+  "Delete": "Löschen",
   "Yes, I want to leave": "Ja, Projekt verlassen",
   "Cancel": "Abbrechen",
   "Close": "Schließen",
   "Invitation Sent": "Einladung abgeschickt",
   "Invitation was sent to": "Die Einladung wurde an ${user} verschickt",
   "Something went wrong": "Etwas ist schiefgelaufen",
-  "Could not delete user.": "Benutzer konnte konnte nicht entfernt werden.",
+  "Could not delete user.": "Benutzer konnte nicht entfernt werden.",
   "Could not send invitation.": "Einladung konnte nicht abgeschickt werden."
 }
