--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -16,11 +16,11 @@
   "Include my private annotations": "Inkl. meiner privaten Annotationen",
   "Export annotations as CSV": "Annotationen als CSV exportieren",
   "Edit document metadata": "Metadaten bearbeiten",
-  "Delete document": "Dokument löschen",
-  "Deleted": "Gelöscht",
-  "Document deleted successfully.": "Das Dokument wurde erfolgreich gelöscht.",
+  "Delete document": "Dokument aus Projekt entfernen",
+  "Deleted": "Entfernt",
+  "Document deleted successfully.": "Das Dokument wurde erfolgreich aus dem Projekt entfernt.",
   "Are you sure?": "Bist Du sicher?",
-  "Are you sure you want to delete this document?": "Bist Du sicher dass Du dieses Dokument löschen willst?",
+  "Are you sure you want to delete this document?": "Bist Du sicher dass Du dieses Dokument aus dem Projekt entfernen willst?",
   "Edit Document Metadata": "Dokumentmetadaten",
   "Title": "Titel",
   "Author": "Autor",
