--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -16,11 +16,11 @@
   "Include my private annotations": "Include my private annotations",
   "Export annotations as CSV": "Export annotations as CSV",
   "Edit document metadata": "Edit document metadata",
-  "Delete document": "Delete document",
-  "Deleted": "Deleted",
-  "Document deleted successfully.": "Document deleted successfully.",
+  "Delete document": "Remove document",
+  "Deleted": "Removed",
+  "Document deleted successfully.": "Document removed successfully.",
   "Are you sure?": "Are you sure?",
-  "Are you sure you want to delete this document?": "Are you sure you want to delete this document?",
+  "Are you sure you want to delete this document?": "Are you sure you want to remove the document from this project?",
   "Edit Document Metadata": "Edit Document Metadata",
   "Title": "Title",
   "Author": "Author",
