--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -51,5 +51,8 @@
   "Open Join": "Open Join",
   "Open Edit": "Open Edit",
   "open-join-info": "With 'Open Join' switched on, any registered user can join your project without an invitation.",
-  "open-edit-info": "With 'Open Edit' switched on, any member of your project can edit the default assignment"
+  "open-edit-info": "With 'Open Edit' switched on, any member of your project can edit the default assignment",
+  "Join": "Join",
+  "Join Project": "Join Project",
+  "Join Project Message": "This project allows all users to become members. Would you like to join?"
 }
