Changed 'Back' icon + label in project sidebar

--- a/src/i18n/de/project-sidebar.json
+++ b/src/i18n/de/project-sidebar.json
@@ -1,4 +1,5 @@
 {
+  "Back to Projects": "Zurück zu Projekte",
   "Projects": "Projekte",
   "Documents": "Dokumente",
   "Collaboration": "Projektteam",
