--- a/src/i18n/en/project-sidebar.json
+++ b/src/i18n/en/project-sidebar.json
@@ -1,4 +1,5 @@
 {
+  "Back to Projects": "Back to Projects",
   "Projects": "Projects",
   "Documents": "Documents",
   "Collaboration": "Collaboration",
